--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,11 +1,11 @@
 appium.url=http://localhost:4723/
-platform=ANDROID
+platform=IOS
 android.version=15
 ios.version=18.4
-android.device.name=WBA_AVD_API_35
+android.device.name=Pixel_XL_API_35
 ios.device.name=iPhone 16 Plus
 android.app.name=android.apk
-ios.app.name=/Users/antonlachuginl/Projects/WB/easytestwrite/ios.app
+ios.app.name=ios.app
 app.activity=ru.wildberries.main.activity.ui.MainActivity
 app.package=com.wildberries.ru.dev
 
