--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 appium.url=http://localhost:4723/
-platform=IOS
+platform=ANDROID
 android.version=15
 ios.version=18.4
 android.device.name=Pixel_XL_API_35
