ver 0.0.8 add ios native auto alerts actions

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -8,6 +8,8 @@ android.app.name=android.apk
 ios.app.name=ios.app
 app.activity=ru.wildberries.main.activity.ui.MainActivity
 app.package=com.wildberries.ru.dev
+ios.auto_accept_alerts=true
+ios.auto_dismiss_alerts=false
 
 playwright.browser.type=chromium
 playwright.headless=false
