ver 0.0.20 add video recording

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -13,3 +13,8 @@ ios.auto_dismiss_alerts=false
 
 playwright.browser.type=chromium
 playwright.headless=false
+
+video.recording.enabled=true
+video.recording.size=1280x720
+video.recording.quality=70
+video.recording.output.dir=build/videos
