ver 0.0.20 add video recording

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -15,6 +15,7 @@ playwright.browser.type=chromium
 playwright.headless=false
 
 video.recording.enabled=true
-video.recording.size=1280x720
-video.recording.quality=70
+video.recording.size=640x360
+video.recording.quality=20
+video.recording.bitrate=50000
 video.recording.output.dir=build/videos
