ver 0.0.22 android / ios record video separate

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 appium.url=http://localhost:4723/
-platform=ANDROID
+platform=IOS
 android.version=15
 ios.version=18.4
 android.device.name=Pixel_XL_API_35
@@ -14,7 +14,8 @@ ios.auto_dismiss_alerts=false
 playwright.browser.type=chromium
 playwright.headless=false
 
-video.recording.enabled=true
+android.video.recording.enabled=false
+ios.video.recording.enabled=false
 video.recording.size=640x360
 video.recording.quality=20
 video.recording.bitrate=50000
