ver 0.0.25 add proxy refactoring

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,8 +1,8 @@
 appium.url=http://localhost:4723/
 platform=ANDROID
-android.version=15
+android.version=9
 ios.version=18.4
-android.device.name=Pixel_XL_API_35
+android.device.name=Pixel_XL
 ios.device.name=iPhone 16 Plus
 android.app.name=android.apk
 ios.app.name=ios.app
