add headless mode support for Android emulator in EmulatorManager and update configuration to enable conditional windowless startup

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -10,6 +10,7 @@ app.activity=ru.wildberries.main.activity.ui.MainActivity
 app.package=com.wildberries.ru.dev
 ios.auto_accept_alerts=true
 ios.auto_dismiss_alerts=false
+android.headless.mode=true
 
 playwright.browser.type=chromium
 playwright.headless=false
