ver 0.0.34 add configurable auto-start and auto-shutdown for emulator in AppConfig, update MobileTest lifecycle logic, and extend configuration properties

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -21,3 +21,7 @@ video.recording.size=640x360
 video.recording.quality=20
 video.recording.bitrate=50000
 video.recording.output.dir=build/videos
+
+# Emulator/Simulator auto-start and auto-shutdown settings
+emulator.auto.start=true
+emulator.auto.shutdown=true
