update configuration properties in README and config file, extend documentation with detailed property descriptions, and refine default values for improved clarity and usability

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,27 +1,50 @@
+# URL-????? ??????? Appium ??? ??????????? ? ????????? ???????????
 appium.url=http://localhost:4723/
+# ????????? ??? ???????????? (ANDROID ??? iOS)
 platform=ANDROID
+# ?????? ???????????? ??????? Android ??? ????????????
 android.version=9
+# ?????? ???????????? ??????? iOS ??? ????????????
 ios.version=18.4
+# ???????? ?????????? Android ??? ????????
 android.device.name=Pixel_XL
+# ???????? ?????????? iOS ??? ????????
 ios.device.name=iPhone 16 Plus
+# ??? ????? ?????????? ??? Android
 android.app.name=android.apk
+# ??? ????? ?????????? ??? iOS
 ios.app.name=ios.app
-app.activity=ru.wildberries.main.activity.ui.MainActivity
-app.package=com.wildberries.ru.dev
+# ???????? ?????????? ?????????? Android
+app.activity=MainActivity
+# ????????????? ?????? ?????????? Android
+app.package=dev
+# ?????????????? ???????? ??????????? ??????????? ?? iOS
 ios.auto_accept_alerts=true
+# ?????????????? ?????????? ??????????? ??????????? ?? iOS
 ios.auto_dismiss_alerts=false
+# ????? ?????? Android-????????? ??? ???????????? ??????????
 android.headless.mode=true
 
+# ??? ???????? ??? Playwright (?????????? ??? ????????????? ???-????????????)
 playwright.browser.type=chromium
+# ????? ?????? Playwright ??? ???????????? ??????????
 playwright.headless=false
 
+# ?????????/?????????? ?????? ????? ??? ?????? ?? Android
 android.video.recording.enabled=false
+# ?????????/?????????? ?????? ????? ??? ?????? ?? iOS
 ios.video.recording.enabled=false
+# ?????? ??????????? ??????
 video.recording.size=640x360
+# ???????? ??????????? ?????? (?? 1 ?? 100)
 video.recording.quality=20
+# ??????? ??????????? ?????? ? ????? ? ???????
 video.recording.bitrate=50000
+# ?????????? ??? ?????????? ???????????? ??????
 video.recording.output.dir=build/videos
 
-# Emulator/Simulator auto-start and auto-shutdown settings
+# ????????? ??????????????? ??????? ? ?????????? ?????????/??????????
+# ?????????????? ?????? ?????????/?????????? ????? ???????
 emulator.auto.start=true
+# ?????????????? ?????????? ?????????/?????????? ????? ??????
 emulator.auto.shutdown=true
