update config.properties file: refine descriptions, improve clarity with consistent terminology, and update default values for better usability and readability

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,50 +1,50 @@
-# URL-????? ??????? Appium ??? ??????????? ? ????????? ???????????
+# Appium server URL for connecting to mobile devices
 appium.url=http://localhost:4723/
-# ????????? ??? ???????????? (ANDROID ??? iOS)
+# Testing platform (ANDROID or iOS)
 platform=ANDROID
-# ?????? ???????????? ??????? Android ??? ????????????
+# Android operating system version for testing
 android.version=9
-# ?????? ???????????? ??????? iOS ??? ????????????
+# iOS operating system version for testing
 ios.version=18.4
-# ???????? ?????????? Android ??? ????????
+# Android device name for emulation
 android.device.name=Pixel_XL
-# ???????? ?????????? iOS ??? ????????
+# iOS device name for emulation
 ios.device.name=iPhone 16 Plus
-# ??? ????? ?????????? ??? Android
+# Android application file name
 android.app.name=android.apk
-# ??? ????? ?????????? ??? iOS
+# iOS application file name
 ios.app.name=ios.app
-# ???????? ?????????? ?????????? Android
-app.activity=MainActivity
-# ????????????? ?????? ?????????? Android
-app.package=dev
-# ?????????????? ???????? ??????????? ??????????? ?? iOS
+# Main activity of the Android application
+app.activity=ru.wildberries.main.activity.ui.MainActivity
+# Android application package identifier
+app.package=com.wildberries.ru.dev
+# Automatic acceptance of pop-up notifications on iOS
 ios.auto_accept_alerts=true
-# ?????????????? ?????????? ??????????? ??????????? ?? iOS
+# Automatic dismissal of pop-up notifications on iOS
 ios.auto_dismiss_alerts=false
-# ????? ?????? Android-????????? ??? ???????????? ??????????
+# Android emulator headless mode (without graphical interface)
 android.headless.mode=true
 
-# ??? ???????? ??? Playwright (?????????? ??? ????????????? ???-????????????)
+# Browser type for Playwright (web testing automation tool)
 playwright.browser.type=chromium
-# ????? ?????? Playwright ??? ???????????? ??????????
+# Playwright headless mode (without graphical interface)
 playwright.headless=false
 
-# ?????????/?????????? ?????? ????? ??? ?????? ?? Android
+# Enable/disable video recording for Android tests
 android.video.recording.enabled=false
-# ?????????/?????????? ?????? ????? ??? ?????? ?? iOS
+# Enable/disable video recording for iOS tests
 ios.video.recording.enabled=false
-# ?????? ??????????? ??????
+# Video recording size for tests
 video.recording.size=640x360
-# ???????? ??????????? ?????? (?? 1 ?? 100)
+# Video recording quality for tests (from 1 to 100)
 video.recording.quality=20
-# ??????? ??????????? ?????? ? ????? ? ???????
+# Video recording bitrate for tests in bits per second
 video.recording.bitrate=50000
-# ?????????? ??? ?????????? ???????????? ??????
+# Directory for saving test video recordings
 video.recording.output.dir=build/videos
 
-# ????????? ??????????????? ??????? ? ?????????? ?????????/??????????
-# ?????????????? ?????? ?????????/?????????? ????? ???????
+# Settings for automatic emulator/simulator startup and shutdown
+# Automatic emulator/simulator startup before tests
 emulator.auto.start=true
-# ?????????????? ?????????? ?????????/?????????? ????? ??????
+# Automatic emulator/simulator shutdown after tests
 emulator.auto.shutdown=true
