update config.properties file: refine descriptions, improve clarity with consistent terminology, and update default values for better usability and readability

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -15,9 +15,9 @@ android.app.name=android.apk
 # iOS application file name
 ios.app.name=ios.app
 # Main activity of the Android application
-app.activity=ru.wildberries.main.activity.ui.MainActivity
+app.activity=MainActivity
 # Android application package identifier
-app.package=com.wildberries.ru.dev
+app.package=dev
 # Automatic acceptance of pop-up notifications on iOS
 ios.auto_accept_alerts=true
 # Automatic dismissal of pop-up notifications on iOS
