--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -3,7 +3,7 @@ appium.url=http://localhost:4723/
 # Testing platform (ANDROID or iOS)
 platform=ANDROID
 # Android operating system version for testing
-android.version=15
+android.version=16
 # iOS operating system version for testing
 ios.version=18.5
 # Android device name for emulation
@@ -23,7 +23,7 @@ ios.auto_accept_alerts=true
 # Automatic dismissal of pop-up notifications on iOS
 ios.auto_dismiss_alerts=false
 # Android emulator headless mode (without graphical interface)
-android.headless.mode=true
+android.headless.mode=false
 
 # Enable/disable video recording for Android tests
 android.video.recording.enabled=false
@@ -42,4 +42,4 @@ video.recording.output.dir=build/videos
 # Automatic emulator/simulator startup before tests
 emulator.auto.start=true
 # Automatic emulator/simulator shutdown after tests
-emulator.auto.shutdown=true
+emulator.auto.shutdown=false
