--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -17,7 +17,9 @@ ios.app.name=ios.app
 # Main activity of the Android application
 app.activity=MainActivity
 # Android application package identifier
-app.package=dev
+app.package=com.dev
+# iOS bundle id (deeplink)
+bundle.id=MOBILEAPP.DEV
 # Automatic acceptance of pop-up notifications on iOS
 ios.auto_accept_alerts=true
 # Automatic dismissal of pop-up notifications on iOS
