refactoring MobileTest class

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,7 +1,7 @@
 # Appium server URL for connecting to mobile devices
 appium.url=http://localhost:4723/
 # Testing platform (ANDROID or iOS)
-platform=ANDROID
+platform=IOS
 # Android operating system version for testing
 android.version=16
 # iOS operating system version for testing
@@ -11,15 +11,15 @@ android.device.name=Pixel_XL
 # iOS device name for emulation
 ios.device.name=iPhone 16 Plus
 # Android application file name
-android.app.name=android.apk
+android.app.name=/Users/blazingfast/Downloads/WB/Wildberries-debug.dev.apk
 # iOS application file name
-ios.app.name=ios.app
+ios.app.name=/Users/blazingfast/Downloads/WB/Wildberries-debug.app
 # Main activity of the Android application
-app.activity=MainActivity
+app.activity=ru.wildberries.main.activity.ui.MainActivity
 # Android application package identifier
-app.package=com.dev
+app.package=com.wildberries.ru.dev
 # iOS bundle id (deeplink)
-bundle.id=MOBILEAPP.DEV
+bundle.id=RU.WILDBERRIES.MOBILEAPP.DEV
 # Automatic acceptance of pop-up notifications on iOS
 ios.auto_accept_alerts=true
 # Automatic dismissal of pop-up notifications on iOS
@@ -44,4 +44,4 @@ video.recording.output.dir=build/videos
 # Automatic emulator/simulator startup before tests
 emulator.auto.start=true
 # Automatic emulator/simulator shutdown after tests
-emulator.auto.shutdown=false
+emulator.auto.shutdown=true
