refactoring MobileTest class

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -11,15 +11,15 @@ android.device.name=Pixel_XL
 # iOS device name for emulation
 ios.device.name=iPhone 16 Plus
 # Android application file name
-android.app.name=/Users/blazingfast/Downloads/WB/Wildberries-debug.dev.apk
+android.app.name=android.apk
 # iOS application file name
-ios.app.name=/Users/blazingfast/Downloads/WB/Wildberries-debug.app
+ios.app.name=ios.app
 # Main activity of the Android application
-app.activity=ru.wildberries.main.activity.ui.MainActivity
+app.activity=ui.MainActivity
 # Android application package identifier
-app.package=com.wildberries.ru.dev
+app.package=com.dev
 # iOS bundle id (deeplink)
-bundle.id=RU.WILDBERRIES.MOBILEAPP.DEV
+bundle.id=MOBILEAPP.DEV
 # Automatic acceptance of pop-up notifications on iOS
 ios.auto_accept_alerts=true
 # Automatic dismissal of pop-up notifications on iOS
