refactoring MobileTest class

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -15,7 +15,7 @@ android.app.name=android.apk
 # iOS application file name
 ios.app.name=ios.app
 # Main activity of the Android application
-app.activity=ui.MainActivity
+app.activity=MainActivity
 # Android application package identifier
 app.package=com.dev
 # iOS bundle id (deeplink)
