add screenshot scaling and quality configuration in AppConfig; update `ImageProcessor` to support JPEG format with improved options; adjust dependencies; bump version to 0.1.2

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -45,3 +45,7 @@ video.recording.output.dir=build/videos
 emulator.auto.start=true
 # Automatic emulator/simulator shutdown after tests
 emulator.auto.shutdown=true
+
+# Screenshot quality settings
+screenshot.scale=0.5
+screenshot.quality=100
