add configurable screenshot flags for test steps; integrate with AppConfig; enable Detekt configuration

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -49,3 +49,7 @@ emulator.auto.shutdown=true
 # Screenshot quality settings
 screenshot.scale=0.5
 screenshot.quality=100
+
+# Screenshot on/off flags
+screenshot.on.success=false
+screenshot.on.failure=true
